apply cloudinary service