@@ -1,76 +1,68 @@
 package com.example.CodeCareer.service;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
-
+import com.cloudinary.Cloudinary;
+import com.cloudinary.utils.ObjectUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.InputStreamResource;
+import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.util.HashMap;
+import java.util.Map;
 
 @Service
 public class FileService {
 
-    @Value("${thienvo.upload-file.base-uri}")
-    private String baseURI;
+    private final Cloudinary cloudinary;
 
-    public void createDirectory(String folder) throws URISyntaxException {
-        URI uri = new URI(folder);
-        Path path = Paths.get(uri);
-        File tmpDir = new File(path.toString());
-        if (!tmpDir.isDirectory()) {
-            try {
-                Files.createDirectory(tmpDir.toPath());
-                System.out.println(">>> CREATE NEW DIRECTORY SUCCESSFUL, PATH = " + tmpDir.toPath());
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
-        } else {
-            System.out.println(">>> SKIP MAKING DIRECTORY, ALREADY EXISTS");
-        }
+    @Value("${cloudinary.upload-preset}")
+    private String uploadPreset;
 
+    public FileService(
+            @Value("${cloudinary.cloud-name}") String cloudName,
+            @Value("${cloudinary.api-key}") String apiKey,
+            @Value("${cloudinary.api-secret}") String apiSecret) {
+        Map<String, String> config = new HashMap<>();
+        config.put("cloud_name", cloudName);
+        config.put("api_key", apiKey);
+        config.put("api_secret", apiSecret);
+        this.cloudinary = new Cloudinary(config);
     }
 
-    public String store(MultipartFile file, String folder) throws URISyntaxException, IOException {
-        // create unique filename
-        String finalName = System.currentTimeMillis() + "-" + file.getOriginalFilename();
-
-        URI uri = new URI(baseURI + folder + "/" + finalName);
-        Path path = Paths.get(uri);
-        try (InputStream inputStream = file.getInputStream()) {
-            Files.copy(inputStream, path,
-                    StandardCopyOption.REPLACE_EXISTING);
-        }
-        return finalName;
+    public void createDirectory(String folder) {
+        // Không cần tạo thư mục local nữa, Cloudinary tự quản lý folder
+        System.out.println(">>> Folder " + folder + " will be used in Cloudinary");
     }
 
-    public long getFileLength(String fileName, String folder) throws URISyntaxException {
-        URI uri = new URI(baseURI + folder + "/" + fileName);
-        Path path = Paths.get(uri);
+    public String store(MultipartFile file, String folder) throws IOException {
+        Map<String, Object> uploadParams = new HashMap<>();
+        uploadParams.put("folder", folder); // Lưu file vào folder trên Cloudinary
+        uploadParams.put("public_id", System.currentTimeMillis() + "-" + file.getOriginalFilename());
+        uploadParams.put("upload_preset", uploadPreset); // Dùng unsigned preset
 
-        File tmpDir = new File(path.toString());
-
-        // file không tồn tại, hoặc file là 1 director => return 0
-        if (!tmpDir.exists() || tmpDir.isDirectory())
-            return 0;
-        return tmpDir.length();
+        Map uploadResult = cloudinary.uploader().upload(file.getBytes(), uploadParams);
+        return (String) uploadResult.get("secure_url"); // Trả về URL của file
     }
 
-    public InputStreamResource getResource(String fileName, String folder)
-            throws URISyntaxException, FileNotFoundException {
-        URI uri = new URI(baseURI + folder + "/" + fileName);
-        Path path = Paths.get(uri);
+    // Các phương thức khác (getResource, getFileLength) cần sửa nếu bạn muốn tải file từ Cloudinary
+    public Resource getResource(String fileUrl) throws IOException {
+        URL url = new URL(fileUrl);
+        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+        connection.setRequestMethod("GET");
+        InputStream inputStream = connection.getInputStream();
+        return new InputStreamResource(inputStream);
+    }
 
-        File file = new File(path.toString());
-        return new InputStreamResource(new FileInputStream(file));
+    // Phương thức để lấy kích thước file (nếu cần)
+    public long getFileLength(String fileUrl) throws IOException {
+        URL url = new URL(fileUrl);
+        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+        connection.setRequestMethod("HEAD"); // Chỉ lấy header để kiểm tra kích thước
+        return connection.getContentLengthLong();
     }
 }
